--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3"
   }
 }
